syntax = "proto3";
package panacea.datadeal.v2alpha1;

option go_package = "github.com/medibloc/panacea-core/v2/x/datadeal/types";

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";

// Deal defines a deal.
message Deal {
  uint64 deal_id = 1;
  string deal_address = 2;
  repeated string data_schema = 3;
  cosmos.base.v1beta1.Coin budget = 4;
  repeated string trusted_oracles = 5;
  uint64 max_num_data = 6;
  uint64 cur_num_data = 7;
  string owner = 8;
  string status = 9;
}